--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -48,7 +48,7 @@ body {
 }
 
 a {
-  background: transparent;
+  background: transparent
 }
 
 a:focus {
@@ -320,7 +320,7 @@ textarea {
 }
 
 a {
-  color: #428bca;
+  color: black;
   text-decoration: none;
 }
 
@@ -4493,6 +4493,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   padding: 15px 15px;
   font-size: 18px;
   line-height: 20px;
+  margin-left: -55%;
 }
 
 .navbar-brand:hover,
