--- a/static/css/flex.css
+++ b/static/css/flex.css
@@ -149,4 +149,13 @@ h3{
 }
 
 
+.form-group{
+     margin-left: 30px;
+     margin-right: 30px;
+     min-height: 200px;
+     min-width: 300px;
+     padding-top: 5px;
+     padding-bottom:5px;
+}
+
 
