changing file structure

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -30,7 +30,7 @@
 			    <p class="navbar-text"> <a href="stats">Stats</a></p>
 			    <p class="navbar-text"> <a href="timer">Timer</a></p>
 			    <p class="navbar-text"> <a href="library">Library</a></p>
-			</li>
+			</li>"
  		</ul>
 	  </div>
 	</nav>   
@@ -97,12 +97,12 @@
 </script>
 <script type="text/javascript">
 	function startWorkout() {
-		location.href = "./addworkout.handlebars"
+		location.href = "addworkout"
 	}
 </script>
 <script type="text/javascript">
 	function editWorkout() {
-		location.href = "./addworkout.handlebars"
+		location.href = "addworkout"
 	}
 </script>
 </html>
