--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,23 +4,26 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/bootstrap-theme.css" rel="stylesheet">
+	<link href="css/index.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">	
-	<link href="./css/flex.css" rel="stylesheet">
+	<link href="../public/css/index.css" rel="stylesheet">
 	<!-- this is a comment in HTML -->
 
 	<nav class="navbar navbar-toggleable-md navbar-light bg-faded" id="navigation">
 	  <div class="container-fluid">
 	    <ul class="navbar-nav navbar-right" id="navigationBar">
 		   	<li id="navText">
-		   		<a class="navbar-brand" href="./Login.html" id="title">flex</a>
+		   		<a class="navbar-brand" href="library" id="title">flex</a>
 			</li>
  		</ul>
 	  </div>
 	</nav>    
 </head>
 <script type="text/javascript">
-	function home() {
-		location.href = "./flex.html"
+	function addWorkout() {
+		location.href = "addworkout"
 	}
 </script>
 	<body>
