--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,6 @@
-<!doctype html>
-
 <html>
 <head>
-	<title>Flex</title>	
+	<title>Workout</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -13,96 +11,31 @@
 	<link href="../public/css/index.css" rel="stylesheet">
 	<!-- this is a comment in HTML -->
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->   
-
 	<nav class="navbar navbar-toggleable-md navbar-light bg-faded" id="navigation">
 	  <div class="container-fluid">
 	    <ul class="navbar-nav navbar-right" id="navigationBar">
 		   	<li id="navText">
 		   		<a class="navbar-brand" href="library" id="title">flex</a>
-			   	<button class="btn navbar-btn" id="addWorkoutBtn" onclick="addWorkout()">Add Workout</button>
-			    <p class="navbar-text"><a href="settings">Settings</a></p>
-			    <p class="navbar-text"> <a href="stats">Stats</a></p>
-			    <p class="navbar-text"> <a href="timer">Timer</a></p>
-			    <p class="navbar-text"> <a href="library">Library</a></p>
-			</li>"
+			</li>
  		</ul>
 	  </div>
-	</nav>   
+	</nav>    
 </head>
-
-<body>
-	<h3>Your Workouts</h3>
-
-	<ul class="list-group" id="workoutList">
-	  <li class="list-group-item justify-content-between">
-	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
-	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>	  	
-	  	<button class="btn btn-right" id="editBtn" onclick="editWorkout()">Edit Workout</button>
-	  </li>
-	  <li class="list-group-item justify-content-between">
-	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
-	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>	  	
-	  	<button class="btn btn-right" id="editBtn" onclick="editWorkout()">Edit Workout</button>
-	  </li>
-	  <li class="list-group-item justify-content-between">
-	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
-	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>	  	
-	  	<button class="btn btn-right" id="editBtn" onclick="editWorkout()">Edit Workout</button>
-	  </li>
-	  <li class="list-group-item justify-content-between">
-	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
-	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>	  	
-	  	<button class="btn btn-right" id="editBtn" onclick="editWorkout()">Edit Workout</button>
-	  </li>
-	</ul>
-
-	<h3>Preset Workouts</h3>
-
-	<ul class="list-group" id="workoutList">
-	  <li class="list-group-item justify-content-between">
-	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
-	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>	  	
-	  	<button class="btn btn-right" id="editBtn" onclick="editWorkout()">Edit Workout</button>
-	  </li>
-	  <li class="list-group-item justify-content-between">
-	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
-	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>	  	
-	  	<button class="btn btn-right" id="editBtn" onclick="editWorkout()">Edit Workout</button>
-	  </li>
-	  <li class="list-group-item justify-content-between">
-	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
-	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>	  	
-	  	<button class="btn btn-right" id="editBtn" onclick="editWorkout()">Edit Workout</button>
-	  </li>
-	  <li class="list-group-item justify-content-between">
-	  	<p>Friday Fun <small class="durationText"> 5 min.</small></p>
-	  	<button class="btn btn-right" id="startBtn" onclick="startWorkout()">Start Workout</button>	  	
-	  	<button class="btn btn-right" id="editBtn" onclick="editWorkout()">Edit Workout</button>
-	  </li>
-	</ul>
-	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="/js/bootstrap.min.js"></script>
-</body>
-
 <script type="text/javascript">
-	function addWorkout() {
-		location.href = "addworkout"
+	function home() {
+		location.href = "library"
 	}
 </script>
-<script type="text/javascript">
-	function startWorkout() {
-		location.href = "addworkout"
-	}
-</script>
-<script type="text/javascript">
-	function editWorkout() {
-		location.href = "addworkout"
-	}
-</script>
+	<body>
+		<div class="form-group">
+		  <label for="usr">Username:</label>
+		  <input type="text" class="form-control" id="usr">
+		</div>
+		<div class="form-group">
+		  <label for="pwd">Password:</label>
+		  <input type="password" class="form-control" id="pwd">
+		  <br/>
+		  <button class="btn" id="submit" onclick="home()">Submit</button>
+		</div>
+	</body>
 </html>
