--- a/public/css/index.css
+++ b/public/css/index.css
@@ -58,7 +58,7 @@ a{
      border: 1px solid black;
      vertical-align: right; 
      white-space: 5px;
-     font-size: 50%;
+     font-size: 3vw;
 }
 
 #submit{
@@ -76,6 +76,10 @@ a{
      padding: 5px;
      color:white;
      background-color: black;
+}
+
+#deleteBtn{
+     font-size: 100px;
 }
 
 #editBtn{
@@ -100,6 +104,9 @@ a{
      margin-right: 10px;
 }
 
+.navbar-text{
+     font-size: 4vw;
+}
 
 #navigation{
      background-color: white;
@@ -132,20 +139,26 @@ h3{
 
 }
 
-.container-fluid{
+.container{
      min-width: 200px;
-}
-
-.col-sm{
+     border: 1px solid black;
      width: 90%;
      height: 200px;
      margin-left: auto;
      margin-right: auto;
+     padding-top: 5px;
+     padding-right: 5px;
+     padding-left: 10px;
      min-height: 200px;
      min-width: 300px;
-     padding-top: 5px;
+
+     white-space: nowrap;
+
+
+}
+
+.col-sm{
      padding-bottom:5px;
-     border: 1px solid black;
 }
 
 
@@ -155,5 +168,76 @@ h3{
      padding-top: 5px;
      padding-bottom:5px;
 }
+
+.exercise-elem{
+     display:inline-block;
+     white-space: nowrap;
+     width: 20px;
+}
+
+
+.dropbtn {
+    background-color: black;
+    color: white;
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    width: 100px;
+
+}
+
+.dropdown-holder{
+     display:inline-block;
+}
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    padding-bottom: 1px;
+    padding-left: 1px;
+
+}
+
+
+/*dropdown*/
+.dropdown-content {
+    display: none;
+    position: inherit;
+    margin-left: 30px;
+    width: 100px ;
+    background-color: white;
+    z-index: 1;
+    padding-bottom: 1;
+    text-align: center;
+}
+
+.dropdown-content .dropdown{
+     position: inherit;
+}
+/* Links inside the dropdown */
+.dropdown-content a {
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    border: 1px solid black;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+    color: black;
+    position: inherit;
+    margin-left: 30px;
+    width: 100px ;
+    background-color: white;
+    z-index: 1;
+    padding-bottom: 1;
+    text-align: center;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: black;
+}
+
 
 
