--- a/views/custom.handlebars
+++ b/views/custom.handlebars
@@ -1,8 +1,6 @@
-<!doctype html>
-
 <html>
 <head>
-	<title>Flex</title>	
+	<title>Timer</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -39,7 +37,7 @@
 			      <li class="nav-item">
 			        <a class="nav-link" href="Timer">Timer</a>
 			      </li>
-			     <!--  <li class="nav-item">
+			   <!--    <li class="nav-item">
 			        <a class="nav-link" href="settings">Settings</a>
 			      </li> -->
 			    </ul>
@@ -47,56 +45,33 @@
 		</div>
 	</nav>
 </head>
-<script>
-	function home() {
-		location.href = "library"
-	}
-</script>
-    
-</head>
 
 <body>
-	<h3>Your Workouts
-			<button type="button" class="btn btn-lg" id="addbtn" aria-label="Left Align">
-	  		<span class="glyphicon glyphicon-plus" onclick="editWorkout()" aria-hidden="true"></span></button></h3>
 
-	{{#each exercise}}
-	<div class="exercise">
-	  <ul class="list-group" id="workoutList">
-	  <li class="list-group-item justify-content-between">
-	  	<p class="workoutname">Friday Fun <small class="durationText"> 5 min.</small>
-	  	<button type="button" class="btn btn-lg" onclick="editWorkout()" id="editbtn" aria-label="Left Align">
-	  		<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-		</button>	  
-		<button type="button" class="btn btn-lg" id="startbtn" onclick="startWorkout()" aria-label="Left Align">
-	  		<span class="glyphicon glyphicon-play-circle" aria-hidden="true"></span>
-		</button></p>	
-		<p class="exercise1"> 1. {{ex}} </p>	
-		<p class="exercise2"> 2. {{ex}}</p>	
-		<p class="exercise3"> 3. {{ex}}</p>	
-	  </li>
-	  </ul>
-	</div>
-	{{/each}}
-
-</br>
-	<h3>Preset Workouts</h3>
-
-</body>
-
-<script type="text/javascript">
-	function addWorkout() {
-		location.href = "addworkout"
-	}
+<style>
+p {
+  text-align: center;
+  font-size: 60px;
+  margin-top:0px;
+}
+</style>
+</head>
+<body>
+<script>
+function cancel() {
+	location.href = "library"
+}
 </script>
-<script type="text/javascript">
-	function startWorkout() {
-		location.href = "custom"
-	}
-</script>
-<script type="text/javascript">
-	function editWorkout() {
-		location.href = "addworkout"
-	}
-</script>
+
+<p id="demo"></p>
+
+<div class="progress">
+  <div class="progress-bar" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+  <div class="progress-bar bg-success" role="progressbar" style="width: 30%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">35%</div>
+  <div class="progress-bar bg-info" role="progressbar" style="width: 20%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+
+<button type="button" id="timerButton" class="btn btn-secondary btn-lg">Pause</button>
+<button type="button" id="timerButton" onclick="cancel()" class="btn btn-secondary btn-lg">Cancel</button>
+	</body>
 </html>
