--- a/views/timer.handlebars
+++ b/views/timer.handlebars
@@ -37,9 +37,9 @@
 			      <li class="nav-item">
 			        <a class="nav-link" href="Timer">Timer</a>
 			      </li>
-			      <li class="nav-item">
+			   <!--    <li class="nav-item">
 			        <a class="nav-link" href="settings">Settings</a>
-			      </li>
+			      </li> -->
 			    </ul>
 			  </div>	
 		</div>
@@ -48,67 +48,45 @@
 
 <body>
 
-
-	<h3>Friday Fun <small> 10 min.</small></h3></br>
-	<h3>Exercises
-		<button type="button" class="btn btn-lg" id="addbtn" aria-label="Left Align">
-	  		<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-		</button>
-	</h3>
-    
-    {{#each exercise}}
-    <div class="exercise">
-		<div class="container">
-			<div class="container-fluid" id="individual-exercise">
-				<div class="row">
-				     <div class="col-11 form-group name-text-box">
-		  				<input type="text" class="form-control name-text-box" placeholder=" {{ex}}" > 
-					 </div>
-					 <button type="button" class="col-1 close" aria-label="Close">
-					  	<span aria-hidden="true">&times;</span>
-					 </button>
-				</div>
-				<div class="row">
-				    <div class="col-4 time-text-box">
-				    	<div class="form-group time-text-box">
-		  					<input type="text" class="form-control" placeholder="{{time}}" >
-						</div>
-					</div>
-				    <div class="col-2">
-						<div class="dropdown">
-						  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						    {{unit}}
-						  </button>
-						  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-						    <a class="dropdown-item" id="unitDrop" href="#">min</a>
-						  </div>
-						</div>
-					</div>
-				    <div class="col-1">
-						<div class="dropdown">
-						  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						    {{sound}}
-						  </button>
-						  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-						    <a class="dropdown-item" href="#">Action</a>
-						    <a class="dropdown-item" href="#">Another action</a>
-						    <a class="dropdown-item" href="#">Something else here</a>
-						  </div>
-						</div>
-					</div>
-				    <div class="col-5">
-				    </div>
-				</div>
-			</div>
-		</div>
-	</div>
-	{{/each}}
-<script type="text/javascript">
-	function addWorkout() {
-		location.href = "addworkout"
-	}
-</script>
+<style>
+p {
+  text-align: center;
+  font-size: 60px;
+  margin-top:0px;
+}
+</style>
+</head>
 <body>
-	<p>We'll add to this later!</p>
+
+<p id="demo"></p>
+
+<script>
+
+
+
+// Set the date we're counting down to
+var estimated = new Date(1618815257015).getTime();
+
+var x = setInterval(function() {
+
+    var now = Date.now();
+    
+    var distance = estimated - now;
+    
+    var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+    var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+    var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+    var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+    
+    document.getElementById("demo").innerHTML = days + "d " + hours + "h "
+    + minutes + "m " + seconds + "s ";
+    
+    if (distance < 0) {
+        clearInterval(x);
+        document.getElementById("demo").innerHTML = "EXPIRED";
+    }
+	}, 1000);
+</script>
+
 	</body>
 </html>
