--- a/views/workout.handlebars
+++ b/views/workout.handlebars
@@ -37,9 +37,9 @@
 			      <li class="nav-item">
 			        <a class="nav-link" href="Timer">Timer</a>
 			      </li>
-			      <li class="nav-item">
+			<!--       <li class="nav-item">
 			        <a class="nav-link" href="settings">Settings</a>
-			      </li>
+			      </li> -->
 			    </ul>
 			  </div>	
 		</div>
