--- a/views/library.handlebars
+++ b/views/library.handlebars
@@ -60,20 +60,20 @@
 			<button type="button" class="btn btn-lg" id="addbtn" aria-label="Left Align">
 	  		<span class="glyphicon glyphicon-plus" onclick="editWorkout()" aria-hidden="true"></span></button></h3>
 
-	{{#each exercise}}
+	{{#each workout}}
 	<div class="exercise">
 	  <ul class="list-group" id="workoutList">
 	  <li class="list-group-item justify-content-between">
-	  	<p class="workoutname">Friday Fun <small class="durationText"> 5 min.</small>
+	  	<p class="workoutname"> {{name}} <small class="durationText"> 5 min.</small>
 	  	<button type="button" class="btn btn-lg" onclick="editWorkout()" id="editbtn" aria-label="Left Align">
 	  		<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 		</button>	  
 		<button type="button" class="btn btn-lg" id="startbtn" onclick="startWorkout()" aria-label="Left Align">
 	  		<span class="glyphicon glyphicon-play-circle" aria-hidden="true"></span>
 		</button></p>	
-		<p class="exercise1"> 1. {{ex}} </p>	
-		<p class="exercise2"> 2. {{ex}}</p>	
-		<p class="exercise3"> 3. {{ex}}</p>	
+		{{#each this.exercises}}
+		<p class="exercise"> 1. {{exname}} </p>
+		{{/each}}
 	  </li>
 	  </ul>
 	</div>
