--- a/views/custom.handlebars
+++ b/views/custom.handlebars
@@ -51,11 +51,12 @@
 <style>
 p {
   text-align: center;
-  font-size: 60px;
+  font-size: 20px;
   margin-top:0px;
 }
 </style>
 </head>
+
 <body>
 <script>
 function cancel() {
@@ -65,13 +66,85 @@ function cancel() {
 
 <p id="demo"></p>
 
-<div class="progress">
+<!-- <div class="progress">
   <div class="progress-bar" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
   <div class="progress-bar bg-success" role="progressbar" style="width: 30%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">35%</div>
   <div class="progress-bar bg-info" role="progressbar" style="width: 20%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
+</div> -->
+
+<div id="outerProgressBar">
+	<div id="innerProgressBar">		  
 </div>
 
-<button type="button" id="timerButton" class="btn btn-secondary btn-lg">Pause</button>
+<button type="button" id="timerButtonPause" onclick="pause()" class="btn btn-secondary btn-lg">Pause</button>
+<button type="button" id="timerButtonPlay" onclick="play()" style="display:none" class="btn btn-secondary btn-lg">Play</button>
 <button type="button" id="timerButton" onclick="cancel()" class="btn btn-secondary btn-lg">Cancel</button>
-	</body>
+
+
+
+
+<audio id="audio">
+	<source src="audio/Blaster.mp3" type="audio/mpeg">
+</audio>
+
+<!--START OF SCRIPT-->
+<script>
+
+//audios
+var audio = document.getElementById("audio"); 
+
+function playAudio() { 
+    audio.play(); 
+} 
+
+function pauseAudio() { 
+    audio.pause(); 
+} 
+
+// TIMERS
+var orig = 5;
+var val = orig;
+var increment = 1;
+var lowbounds = -1;
+var myVar = setInterval(myTimer, 1000);
+
+function myTimer() {
+	if(val <= lowbounds)
+    {
+    	clear();
+    }
+    else{
+	    document.getElementById("demo").innerHTML = val;
+	    val -= increment;
+	    animate();
+	}
+}
+
+function clear(){
+    clearTimeout(myVar);
+    playAudio();
+    //document.getElementById("demo").innerHTML = orig;
+}
+
+function pause(){
+	clearTimeout(myVar); 
+	$("#timerButtonPlay").show();
+	$("#timerButtonPause").hide();
+}
+
+function play(){
+	myVar = setInterval(myTimer, 1000);
+	$("#timerButtonPlay").hide();
+	$("#timerButtonPause").show();	 
+}
+
+//ANIMATION
+function animate(){
+    $("#innerProgressBar").animate({
+        width: (1-((val+1)/(orig+1))) * 100 +'%'
+    });
+}
+
+</script>
+</body>
 </html>
