--- a/views/library.handlebars
+++ b/views/library.handlebars
@@ -72,7 +72,7 @@
 	  		<span class="glyphicon glyphicon-play-circle" aria-hidden="true"></span>
 		</button></p>	
 		{{#each this.exercises}}
-		<p class="exercise"> 1. {{exname}} </p>
+		<p class="exercise"> {{exname}} ({{this.time}} {{this.unit}}) </p>
 		{{/each}}
 	  </li>
 	  </ul>
