--- a/views/addworkout.handlebars
+++ b/views/addworkout.handlebars
@@ -163,9 +163,7 @@
 			location.href = "addworkout"
 			var length = Object.keys(window.data.workout.exercises).length;
 			var exname = "Exercise Name";
-			var time = "Time"
-			var unit = "Unit"
-			var sound = "Sound"
+			var time = "Time"			var sound = "Sound"
 			window.data.workout.exercises[length] = {exname, time, unit, sound};
 	};	</script>
 
