--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -61,5 +61,15 @@
 		  <br/>
 		  <button class="btn" id="submit" onclick="home()">Submit</button>
 		</div>
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114601752-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-114601752-1');
+		</script>
 	</body>
 </html>
