--- a/views/library.handlebars
+++ b/views/library.handlebars
@@ -56,7 +56,7 @@
 </head>
 
 <body>
-	<h3>Your Workouts
+	<h3>Workouts
 			<button type="button" class="btn btn-lg" id="addbtn" aria-label="Left Align">
 	  		<span class="glyphicon glyphicon-plus" onclick="editWorkout()" aria-hidden="true"></span></button></h3>
 
@@ -79,10 +79,10 @@
 	</div>
 	{{/each}}
 
-</br>
-	<h3>Preset Workouts</h3>
-
 </body>
+
+
+<!--SCRIPTS-->
 
 <script type="text/javascript">
 	function addWorkout() {
