--- a/views/timer.handlebars
+++ b/views/timer.handlebars
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<title>Timer</title>	
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -44,6 +45,7 @@
 			  </div>	
 		</div>
 	</nav>
+	<h3>Timer</h3>
 </head>
 
 <body>
@@ -61,7 +63,6 @@ p {
 <p id="demo"></p>
 
 <script>
-
 
 
 // Set the date we're counting down to
@@ -87,5 +88,12 @@ var x = setInterval(function() {
     }
 	}, 1000);
 </script>
+<div class="timer-btns" id='timer-btns'>
+<button type="button" class="timer-start-btn" id="timer-start-btn"
+		<p>Start</p></button>
+
+<button type="button" class="timer-stop-btn" id="timer-stop-btn" 
+		<p>Stop</p></button></div>
+
 	</body>
 </html>
