--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,17 +1,17 @@
 /* applies to anything of class "example-class-selector" */
 .example-class-selector {
-	margin-top: 2em;
+     margin-top: 2em;
 }
 
 /* applies to any <p> descendants of an element of class "example-class-selector" */
 .example-class-selector p {
-	/* Colors are in hexadecimal: http://www.colorpicker.com/ */	
-	color: #CC00AA;
+     /* Colors are in hexadecimal: http://www.colorpicker.com/ */     
+     color: #CC00AA;
 }
 
 .jumbotron {
-	position: relative;
-	background: none;
+     position: relative;
+     background: none;
 }
 
 a{
@@ -25,7 +25,7 @@ a{
      bottom: 0;
      right: 0;
      position: absolute;
-     z-index: -1;	
+     z-index: -1;   
 }
 
 .jumbotron p {
@@ -42,10 +42,12 @@ a{
 }
 
 #title{
+     font: bold;
      font-size: 30px;
-     color: black;
+     color: #651fff;
      font-weight: bold;
      text-align: left;
+     float:left;
 }
 
 #addWorkoutBtn{
@@ -70,13 +72,36 @@ a{
      font-size: 100%;
 }
 
-#startBtn{
-     margin-left: 10px;
-     text-align: right;
-     padding: 5px;
-     color:white;
-     background-color: black;
+.start-btn{
+    width: 180px;
+    height: 33px;
+    font-size: 18px;
+    font-weight: 100;
+    color: white;
+    background-color: #651FFF;
+    border: 2px solid #651fff;
+    border-radius: 25px;
+    box-shadow: 0px 2px 3px 0px #00000020;
+    float: right;
+    margin-top: 5px;
+
 }
+
+.edit-btn{
+    width: 107px;
+    height: 33px;
+    font-size: 18px;
+    font-weight: 100;
+    color: #3F4A4F
+    background-color: #white;
+    border: 2px solid #651fff;
+    border-radius: 25px;
+    box-shadow: 0px 2px 3px 0px #00000020;
+    float: right;
+    margin-right: 10px;
+    margin-top: 5px;
+}
+
 
 #deleteBtn{
      font-size: 100px;
@@ -96,11 +121,22 @@ a{
 }
 
 #navText{
-     color: black;
+     color: #3F4A4F
      display:inline-block;
      text-align: center;
      font-size: 50px;
      margin-right: 35px;
+}
+
+#demo{
+    background-color: #ffffff;
+    border: #ffffff;
+    border radius: 25px;
+    box-shadow: 0px 3px 6px 0px #00000020;
+    font-size: 58px;
+    font-weight: bold;
+    color: #3F4A4F;
+    padding: 20px;
 }
 
 .navbar-text{
@@ -108,19 +144,22 @@ a{
 }
 
 #navigation{
+     font-size: 18px;
      background-color: white;
-     border: 1px solid black;
      justify-content: flex-center !important;
 
-}
+     padding-top: 20px;
+     padding-bottom: 20px;
+     padding-left: 30px;
+     padding-right: 30px;
 
-.list-group-item{
-     font-size: 15px;
-     padding-bottom: 5px;
+     border: #ffffff;
+     box-shadow: 0px 2px 5px 0px #00000020
 }
 
 .durationText{
-     font-size: 10px;
+     font-size: 18px;
+     color: #3F4A4F;
 }
 
 .container{
@@ -159,12 +198,27 @@ a{
 }
 
 body{
+     font-family: 'Karla', sans-serif;
      margin: 30px;
+     background-color: #FCFCFC;
 }
 
 .list-group-item{
+
      display:inline-block;
      white-space: nowrap;
+     border: #ffffff;
+     border-radius: 10px;
+     box-shadow: 0px 2px 6px 0px #00000020;
+
+     padding-top: 20px;
+     padding-bottom: 20px;
+     padding-left: 30px;
+     padding-right: 30px;
+
+     font-size: 15px;
+     margin-top: 10px;
+
 }
 
 .glyphicon{
@@ -179,15 +233,13 @@ body{
 }
 
 .workoutname{
-     font-size: 20px;
+     font-size: 24px;
+     font-weight: bold;
+     color: #3F4A4F;
 }
 
 .progress{
      height: 50px;
-}
-
-.dropdown-item{
-     font-size: 15px;
 }
 
 .timerButton{
@@ -196,8 +248,68 @@ body{
      text-align: center;
 }
 
+.timer-start-btn{
+    width: 150px;
+    height: 46px;
+    font-size: 25px;
+    color: #3F4A4F;
+    background-color: white;
+    border: 2px solid #651fff;
+    border-radius: 25px;
+    box-shadow: 0px 2px 3px 0px #00000020;
+    margin-right: 10px;
+    margin-top: 5px;
+}
+
+.timer-stop-btn{
+    width: 150px;
+    height: 46px;
+    font-size: 24px;
+    color: #ffffff;
+    background-color: #651fff;
+    border: 2px solid #651fff;
+    border-radius: 25px;
+    box-shadow: 0px 2px 3px 0px #00000020;
+    margin-right: 10px;
+    margin-top: 5px;
+}
+
+.timer-btns{
+    display: -webkit-flex; /* Safari */
+    -webkit-align-items: center; /* Safari 7.0+ */ !important
+    display: flex;
+    align-items: center; !important
+}
+
+.exercise-names{
+    font-size: 18px;
+    font-weight: 100;
+}
+
+h3{
+    font-size:24px;
+    color: #3F4A4F;
+    margin-right: 20px;
+    margin-left: 20px; 
+}
+
+.stats{
+    background-color: #ffffff;
+    border: #ffffff;
+    border-radius: 4px;
+    box-shadow: 0px 2px 6px 0px #00000020;
+    padding: 20px;
+}
+
+.list-group-item{
+    margin-right: 20px;
+    margin-left: 20px; 
+}
+
+
+
 #outerProgressBar{
-     border: 1px solid black;
+     border: 1px solid #651fff;
      height: 50px;
      width: 100%;
      margin-top: 20px;
@@ -206,8 +318,8 @@ body{
 
 #innerProgressBar{
      text-align: left;
-     border: 1px solid black;
-     background-color: black;
+     border: 1px solid #651fff;
+     background-color: #651fff;
      height: 48px;
      width:0%;
      margin-bottom: 20px;
