--- a/views/library.handlebars
+++ b/views/library.handlebars
@@ -13,7 +13,9 @@
     <link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/index.css" rel="stylesheet">
 
-
+	<style>
+	@import url('https://fonts.googleapis.com/css?family=Karla');
+	</style>
 	<!-- this is a comment in HTML -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -65,11 +67,11 @@
 	  <ul class="list-group" id="workoutList">
 	  <li class="list-group-item justify-content-between">
 	  	<p class="workoutname"> {{name}} <small class="durationText"> 5 min.</small>
-	  	<button type="button" class="btn btn-lg" onclick="editWorkout()" id="editbtn" aria-label="Left Align">
-	  		<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-		</button>	  
-		<button type="button" class="btn btn-lg" id="startbtn" onclick="startWorkout()" aria-label="Left Align">
-	  		<span class="glyphicon glyphicon-play-circle" aria-hidden="true"></span>
+	  	<p class="workoutname">Friday Fun <small class="durationText"> 5 min.</small>
+		<button type="button" class="start-btn" id="start-btn" onclick="startWorkout()" aria-label="Left Align">
+		<p>Start Workout</p></button>
+		<button type="button" class="edit-btn" onclick="editWorkout()" id="editbtn" aria-label="Left Align">
+	  		<p>Edit</p>
 		</button></p>	
 		{{#each this.exercises}}
 		<p class="exercise"> {{exname}} ({{this.time}} {{this.unit}}) </p>
