--- a/views/addworkout.handlebars
+++ b/views/addworkout.handlebars
@@ -75,7 +75,7 @@
 				<div class="row">
 				    <div class="col-4 time-text-box">
 				    	<div class="form-group time-text-box">
-		  					<input type="text" class="form-control-lg" placeholder="{{this.time}}" >
+		  					<input type="text" class="form-control-lg time-unit" placeholder="{{this.time}}" >
 						</div>
 					</div>
 				    <div class="col-2">
@@ -101,8 +101,14 @@
 						  </div>
 						</div>
 					</div>
-				    <div class="col-5">
+				    <div class="col-2">
 				    </div>
+				    <div class="col-1">
+						  <button class="btn">
+						  	Save
+						</button>
+					</div>
+
 				</div>
 			</div>
 		</div>
