--- a/views/addworkout.handlebars
+++ b/views/addworkout.handlebars
@@ -104,7 +104,7 @@
 				    <div class="col-2">
 				    </div>
 				    <div class="col-1">
-						  <button class="btn">
+						  <button class="save-btn">
 						  	Save
 						</button>
 					</div>
