--- a/views/custom.handlebars
+++ b/views/custom.handlebars
@@ -72,7 +72,7 @@ function cancel() {
 
 <button type="button" id="timerButtonPause" onclick="pause()" class="btn btn-secondary btn-lg">Pause</button>
 <button type="button" id="timerButtonPlay" onclick="play()" style="display:none" class="btn btn-secondary btn-lg">Play</button>
-<button type="button" id="timerButton" onclick="cancel()" class="btn btn-secondary btn-lg">Cancel</button>
+<button type="button" id="timerButtonCancel" onclick="cancel()" class="btn btn-secondary btn-lg">Cancel</button>
 
 
 
