--- a/views/addworkout.handlebars
+++ b/views/addworkout.handlebars
@@ -9,8 +9,8 @@
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>	
-    <link href="css/bootstrap.css" rel="stylesheet">
-	<link href="css/index.css" rel="stylesheet">
+    <link href="/css/bootstrap.css" rel="stylesheet">
+	<link href="/css/index.css" rel="stylesheet">
 
 
 
@@ -59,14 +59,16 @@
 		</button>
 	</h3>
     
-    {{#each workout}}
-    {{#each this.exercises}}
+    <form action="/addworkout" method="POST">
+
+
+    {{#each workout.exercises}}
     <div class="exercise">
 		<div class="container">
 			<div class="container-fluid" id="individual-exercise">
 				<div class="row">
 				     <div class="col-11 form-group name-text-box">
-		  				<input type="text" class="form-control-lg name-text-box" placeholder=" {{this.exname}}"> 
+		  				<input type="text" name="nancy{{@index}}" class="form-control-lg name-text-box" placeholder=" {{this.exname}}"> 
 					 </div>
 					 <button type="button" class="col-1 close deletebtn" aria-label="Close">
 					  	<span aria-hidden="true">&times;</span>
@@ -75,10 +77,10 @@
 				<div class="row">
 				    <div class="col-4 time-text-box">
 				    	<div class="form-group time-text-box">
-		  					<input type="text" class="form-control-lg time-unit" placeholder="{{this.time}}" >
+		  					<input type="text" name="nancysquare{{@index}}" class="form-control-lg time-unit" placeholder="{{this.time}}" >
 						</div>
 					</div>
-				    <div class="col-2">
+				    <div class="col-1">
 						<div class="dropdown">
 						  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						    {{this.unit}}
@@ -89,6 +91,7 @@
 						  </div>
 						</div>
 					</div>
+					<div class="divider"/></div>
 				    <div class="col-1">
 						<div class="dropdown">
 						  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -101,12 +104,8 @@
 						  </div>
 						</div>
 					</div>
-				    <div class="col-2">
-				    </div>
+				    <div class="divider"/></div>
 				    <div class="col-1">
-						  <button class="btn">
-						  	Save
-						</button>
 					</div>
 
 				</div>
@@ -114,7 +113,8 @@
 		</div>
 	</div>
 	{{/each}}
-	{{/each}}
+	<button type="submit">nanny!</button>
+    </form>
 
 	</br>
 	<h3>Repetitions</h3>
