--- a/views/addworkout.handlebars
+++ b/views/addworkout.handlebars
@@ -113,7 +113,7 @@
 		</div>
 	</div>
 	{{/each}}
-	<button type="submit">nanny!</button>
+	<button id="save-workout-btn" type="submit">nanny!</button>
     </form>
 
 	</br>
