--- a/views/timer.handlebars
+++ b/views/timer.handlebars
@@ -93,7 +93,8 @@ var x = setInterval(function() {
 		<p>Start</p></button>
 
 <button type="button" class="timer-stop-btn" id="timer-stop-btn" 
-		<p>Stop</p></button></div>
+		<p>Stop</p></button>
+	</div>
 
 	</body>
 </html>
