--- a/views/addworkout.handlebars
+++ b/views/addworkout.handlebars
@@ -50,6 +50,7 @@
 
 <body>
 
+<h3>Workout Name</h3>
 
 	    <input class="form-control input-lg" id="inputlg" placeholder="Friday Fun" type="text">
   <large> <!--10 min. --></large></br></br>
