--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -4006,6 +4006,19 @@ tbody.collapse.show {
   flex-grow: 1;
 }
 
+.navbar-collapse{
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+
 .navbar-toggler {
   padding: 0.25rem 0.75rem;
   font-size: 1.25rem;
