--- a/views/addworkout.handlebars
+++ b/views/addworkout.handlebars
@@ -31,13 +31,13 @@
 			  <div class="collapse navbar-collapse" id="navbarNav">
 			    <ul class="navbar-nav">
 			      <li class="nav-item active">
-			        <a class="nav-link" href="library">Home<span class="sr-only">(current)</span></a>
+			        <a class="nav-link" href="../library">Home<span class="sr-only">(current)</span></a>
 			      </li>
 			      <li class="nav-item">
-			        <a class="nav-link" href="stats">Stats</a>
+			        <a class="nav-link" href="../stats">Stats</a>
 			      </li>
 			      <li class="nav-item">
-			        <a class="nav-link" href="Timer">Timer</a>
+			        <a class="nav-link" href="../Timer">Timer</a>
 			      </li>
 			<!--       <li class="nav-item">
 			        <a class="nav-link" href="settings">Settings</a>
