--- a/views/addworkout.handlebars
+++ b/views/addworkout.handlebars
@@ -51,7 +51,7 @@
 <body>
 
 
-	    <input class="form-control input-lg" id="inputlg" placeholder="Friday Fun" type="text">
+	    <input class="form-control input-lg" id="inputlg" placeholder="Friday Fun" name="name" type="text">
   <large> <!--10 min. --></large></br></br>
 	<h3>Exercises
 		<button type="button" class="btn btn-lg" id="addbtn" aria-label="Left Align">
@@ -59,7 +59,6 @@
 		</button>
 	</h3>
     
-    <form action="/addworkout" method="POST">
 
 
     {{#each workout.exercises}}
@@ -68,7 +67,8 @@
 			<div class="container-fluid" id="individual-exercise">
 				<div class="row">
 				     <div class="col-11 form-group name-text-box">
-		  				<input type="text" name="nancy{{@index}}" class="form-control-lg name-text-box" placeholder=" {{this.exname}}"> 
+		  				<input type="text" name="exname" class="form-control-lg name-text-box" placeholder=" {{this.exname}}"> 
+		  					<!-- <input type="text" name="nancy{{@index}}" class="form-control-lg name-text-box" placeholder=" {{this.exname}}">  -->
 					 </div>
 					 <button type="button" class="col-1 close deletebtn" aria-label="Close">
 					  	<span aria-hidden="true">&times;</span>
@@ -77,18 +77,13 @@
 				<div class="row">
 				    <div class="col-4 time-text-box">
 				    	<div class="form-group time-text-box">
-		  					<input type="text" name="nancysquare{{@index}}" class="form-control-lg time-unit" placeholder="{{this.time}}" >
+		  					<input type="text" name="time" class="form-control-lg time-unit" placeholder="{{this.time}}" >
 						</div>
 					</div>
 				    <div class="col-1">
-						<div class="dropdown">
-						  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						    {{this.unit}}
-						  </button>
-						  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-						    <a class="dropdown-item" id="unitDrop" href="#">min</a>
-						    <a class="dropdown-item" id="unitDrop" href="#">sec</a>
-						  </div>
+				    	<div name="unit">
+					    	<input type="radio" value="min" checked> min<br>
+							<input type="radio" value="sec"> sec<br>
 						</div>
 					</div>
 					<div class="divider"/></div>
@@ -97,7 +92,7 @@
 						  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						    {{this.sound}}
 						  </button>
-						  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+						  <div class="dropdown-menu" name="sound" aria-labelledby="dropdownMenuButton">
 						    <a class="dropdown-item" href="#">Bell</a>
 						    <a class="dropdown-item" href="#">Horn</a>
 						    <a class="dropdown-item" href="#">Flute</a>
@@ -113,8 +108,6 @@
 		</div>
 	</div>
 	{{/each}}
-	<button type="submit">nanny!</button>
-    </form>
 
 	</br>
 	<h3>Repetitions</h3>
