--- a/views/library.handlebars
+++ b/views/library.handlebars
@@ -86,7 +86,7 @@
 
    <form action="/addworkout" method="POST">
    		<a href = "library">
-			<button type="submit" onclick="refresh()" class="btn-lg savebtn">Save</button>
+			<button type="submit" class="btn-lg savebtn">Save</button>
 		</a>
     </form>
 </body>
