--- a/views/addworkout.handlebars
+++ b/views/addworkout.handlebars
@@ -14,14 +14,6 @@
 
 
 
-	<!-- this is a comment in HTML -->
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->   
 	<nav class="navbar navbar-toggleable-md navbar-light" id="navigation">
 	  	<div class="container-fluid">
 	  		  <a id="title">flex</a>
@@ -58,6 +50,9 @@
 		<button type="button" class="btn btn-lg" id="addbtn" aria-label="Left Align">
 	  		<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 		</button>
+		<button type="button" class="btn btn-lg" id="addbtn" aria-label="Left Align">
+	  		<span class="glyphicon glyphicon-check" aria-hidden="true"></span>
+		</button>
 	</h3>
     
 
@@ -73,6 +68,7 @@
 					 </div>
 					 <button type="button" class="col-1 close deletebtn" aria-label="Close">
 					  	<span aria-hidden="true">&times;</span>
+
 					 </button>
 				</div>
 				<div class="row">
