--- a/views/library.handlebars
+++ b/views/library.handlebars
@@ -56,22 +56,22 @@
 </script>
     
 </head>
-
+<form id="libraryForm" action="/library" method="POST">
 <body>
-	<h3>Workouts
+	<h3>Workout
 			<button type="button" class="btn btn-lg" id="addbtn" aria-label="Left Align">
-	  		<span class="glyphicon glyphicon-plus" onclick="editWorkout()" aria-hidden="true"></span></button></h3>
+	  		<span class="glyphicon glyphicon-plus" onclick="addWorkout({{workout.length}})" aria-hidden="true"></span></button></h3>
 
 	{{#each workout}}
 	<div class="exercise">
 	  <ul class="list-group" id="workoutList">
 	  <li class="list-group-item justify-content-between">
-	  	<p class="workoutname"> {{name}} <small class="durationText"> 5 min.</small>
+	  	<p class="workoutname"> {{name}} <small class="durationText"> <!-- 5 min. --></small>
 		<!-- <a href="/custom/{{@index}}"> -->
 		<button type="button" class="start-btn" id="start-btn" onclick="startWorkout()" aria-label="Left Align">Workout</button>
 		</p>
 		<!-- </a> -->
-		<a href="/addworkout/{{@index}}">
+		<a href="/editworkout/{{@index}}">
 		<button type="button" class="edit-btn" id="editbtn" aria-label="Left Align">
 	  		<p>Edit</p>
 		</button>	
@@ -84,32 +84,28 @@
 		
 	{{/each}}
 
-   <form action="/addworkout" method="POST">
-   		<a href = "library">
-			<button type="submit" class="btn-lg savebtn">Save</button>
-		</a>
-    </form>
+
 </body>
 
 
 <!--SCRIPTS-->
 
 <script type="text/javascript">
-	function addWorkout() {
-		location.href = "addworkout"
+	function addWorkout(val) {
+		document.getElementById("libraryForm").submit();
+		//window.location.reload()
 	}
-</script>
-<script type="text/javascript">
 	function startWorkout() {
 		location.href = "custom"
 	}
-</script>
-<script type="text/javascript">
-	function editWorkout() {
-		location.href = "addworkout"
+	function editWorkout(val) {
+		location.href = "/editworkout/".concat(val);
 	}
 	function refresh() {
 		location.href = "library"
 	}
+
+
 </script>
+</form>
 </html>
